# kayce.basqu.es

./: .eleventy.js  .firebaserc  .gitignore  .travis.yml  4  BUILD.bazel  LICENSE  MODULE.bazel  README.md  build.fish  conf.py  deps_full.txt  dragon.rst  eleventy.config.js  firebase.json  index.html  index.rst  lighthouserc.js  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  requirements.txt
.circleci/: config.yml
.firebase/: hosting.b3V0.cache
.github/workflows/: deploy.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  firebase.yml  lighthouse.yaml  playwright.yml  website.yml
_extensions/: books.py
_static/: main.css
_templates/: layout.html
books/: index.rst
content/: index.md  main.css
content/_includes/: base.mustache  base.njk  blog.njk  (+1 more)
indexes/: index.md
partials/: subscription.html
posts/: 15-minute-work-chunks.md  best-practices.md  eye-contact.md  helloworld.html  humanism.md  idolatry.md  information-control.md  information-foraging.md  information-preferences.md  metrics.md  prompts.md  red-buttons.md  regression-tests-for-docs.md  response-rates.md  tianenmen.md
pull-ups/: index.rst
pullups/: index.rst
recipes/: chocolate-chip-cookies.rst  index.rst
scripts/: main.js
src/: contact.md  feed.njk  habits.md  index.md  main.css  photos.md  pigweed-assistant.md  pigweedai.md  portfolio.md  questions.md  quotes.md  sitemap.xml.njk
styles/: main.css
templates/: base.html  post.md  template.html  template.md
tests/: README.md  content.spec.ts
tools/: build.js  build.sh  main.sh  server.js
www/: CNAME  index.html
(+129 files in other folders)
